// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons component should matche DOM Snapshot 1`] = `
<div
  className="buttons"
>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    AC
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    +/-
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    %
  </button>
  <button
    className="right-button"
    onClick={[Function]}
    type="button"
  >
    ÷
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    7
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    8
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    9
  </button>
  <button
    className="right-button"
    onClick={[Function]}
    type="button"
  >
    ×
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    4
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    5
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    6
  </button>
  <button
    className="right-button"
    onClick={[Function]}
    type="button"
  >
    −
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    1
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    2
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    3
  </button>
  <button
    className="right-button"
    onClick={[Function]}
    type="button"
  >
    +
  </button>
  <button
    className="button zero"
    onClick={[Function]}
    type="button"
  >
    0
  </button>
  <button
    className="button"
    onClick={[Function]}
    type="button"
  >
    .
  </button>
  <button
    className="right-button"
    onClick={[Function]}
    type="button"
  >
    =
  </button>
</div>
`;

exports[`Buttons component should matche DOM Snapshot 2`] = `
<div
  className="Calc-container"
>
  <div
    className="Result-container"
  >
    <h1
      className="result"
    />
  </div>
  <div
    className="buttons"
  >
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      AC
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      +/-
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      %
    </button>
    <button
      className="right-button"
      onClick={[Function]}
      type="button"
    >
      ÷
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      7
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      8
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      9
    </button>
    <button
      className="right-button"
      onClick={[Function]}
      type="button"
    >
      ×
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      4
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      5
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      6
    </button>
    <button
      className="right-button"
      onClick={[Function]}
      type="button"
    >
      −
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      1
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      2
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      3
    </button>
    <button
      className="right-button"
      onClick={[Function]}
      type="button"
    >
      +
    </button>
    <button
      className="button zero"
      onClick={[Function]}
      type="button"
    >
      0
    </button>
    <button
      className="button"
      onClick={[Function]}
      type="button"
    >
      .
    </button>
    <button
      className="right-button"
      onClick={[Function]}
      type="button"
    >
      =
    </button>
  </div>
</div>
`;

exports[`Buttons component should matche DOM Snapshot 3`] = `
<div>
  <nav>
    <h1
      className="Title"
    >
      Math Magicians
    </h1>
    <ul>
      <li>
        <a
          aria-current="page"
          className="active"
          href="/"
          onClick={[Function]}
        >
          Home
        </a>
      </li>
      <li>
        <a
          className=""
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
      </li>
      <li>
        <a
          className=""
          href="/quote"
          onClick={[Function]}
        >
          Quote
        </a>
      </li>
    </ul>
  </nav>
  <main>
    <h2>
      Let's do some Math!
    </h2>
    <div
      className="Calc-container"
    >
      <div
        className="Result-container"
      >
        <h1
          className="result"
        />
      </div>
      <div
        className="buttons"
      >
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="right-button"
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="right-button"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="right-button"
          onClick={[Function]}
          type="button"
        >
          −
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="right-button"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
        <button
          className="button zero"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <button
          className="button"
          onClick={[Function]}
          type="button"
        >
          .
        </button>
        <button
          className="right-button"
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </main>
</div>
`;
